--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview",
     "predeploy" : "npm run build",
     "deploy" : "gh-pages -d dist"
+    "homepage": "https://samlee03.github.io/Rhythm-It/"
   },
   "dependencies": {
     "react": "^18.2.0",
