--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
+  "homepage": "https://samlee03.github.io/Rhythm-It/",
   "name": "timing-game",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d dist"
-    "homepage": "https://samlee03.github.io/Rhythm-It/"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
